--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<!--上传 Github 所有事项的教程在 https://www.bilibili.com/video/BV1D21uYaEeR/-->
+<!-- 上传 Github 所有事项的教程在 https://www.bilibili.com/video/BV1D21uYaEeR/ -->
 <html lang = "zh-CN">
 	<head>
-		<!--在上传 Github 时注意，所有目录前要加上 '/main/' -->
+		<!-- 在上传 Github 时注意，所有目录前要加上 '/main/' -->
 		<meta charset = "UTF-8" />
-		<title>GZXUEXUE 的 个人主页</title>
+		<title>GZXUEXUE</title>
 		<!--网页图标-->
-		<link rel = "icon" type = "image/x-icon" href = "/main/img/icon.ico" />
+		<link rel = "icon" type = "image/x-icon" href = "/main/img/favicon.ico" />
+		<style>
+			/* CSS 部分 */
+			body{
+				/* 背景图片 */
+				background: url(/main/img/background.png) no-repeat;
+			}
+		</style>
 	</head>
 	<body>
 		<h3>GZXUEXUE 的 个人主页</h3>
