--- a/oj.html
+++ b/oj.html
@@ -2,9 +2,9 @@
 <html lang = "zh-CN">
 	<head>
 		<meta charset = "utf-8">
-		<title>GZOI - 欢迎来刷题！</title>
+		<title>GZOI</title>
 		<!--网页图标-->
-		<link rel = "icon" type = "image/x-icon" href = "/main/img/icon.ico" />
+		<link rel = "icon" type = "image/x-icon" href = "/main/img/favicon.ico" />
 	</head>
 	<body>
 		<p>Welcome!</p>
