--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 			body{
 				/* 背景图片 */
 				background: url(/main/img/background.png) no-repeat;
+			}.headtitle{
+				text-align: center;
+				margin: auto;
+				color: whitesmoke;
 			}
 		</style>
 	</head>
 	<body>
-		<h3>GZXUEXUE 的 个人主页</h3>
+		<div class = "headtitle">
+			<h3>GZXUEXUE 的个人主页</h3>
+		</div>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
 		<a href = "/main/oj">题库</a>
 	</body>
