--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 				/* 背景图片 */
 				background: url(/main/img/background.png) no-repeat;
 			}.headtitle{
+				/* 标题 */
 				text-align: center;
 				margin: auto;
 				color: whitesmoke;
+				font-size: 20;
 			}
 		</style>
 	</head>
@@ -27,3 +29,4 @@
 		<a href = "/main/oj">题库</a>
 	</body>
 </html>
+
