--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				text-align: center;
 				margin: auto;
 				color: whitesmoke;
-				font-size: 20;
+				font-size: 9.1cm;
 			}
 		</style>
 	</head>
@@ -29,4 +29,5 @@
 		<a href = "/main/oj">题库</a>
 	</body>
 </html>
+
 
