--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<div class = "headtitle">
 			<h1>GZXUEXUE 的个人主页</h1>
 		</div>
+		<hr color = "whitesmoke">
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
 		<a href = "/main/oj">题库</a>
 	</body>
 </html>
-
