--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <!-- 上传 Github 所有事项的教程在 https://www.bilibili.com/video/BV1D21uYaEeR/ -->
 <html lang = "zh-CN">
 	<head>
-		<!-- 在上传 Github 时注意，所有目录前要加上 '/main/' -->
+		<!-- 在上传 Github 时注意，所有目录前要加上 '/01/' -->
 		<meta charset = "UTF-8" />
 		<title>GZXUEXUE</title>
 		<!--网页图标-->
-		<link rel = "icon" type = "image/x-icon" href = "/main/img/favicon.ico" />
+		<link rel = "icon" type = "image/x-icon" href = "/01/img/favicon.ico" />
 		<style>
 			/* CSS 部分 */
 			body{
 				/* 背景图片 */
-				background: url(/main/img/background.png) no-repeat;
+				background: url(/01/img/background.png) no-repeat;
 			}.headtitle{
 				/* 标题 */
 				text-align: center;
@@ -26,8 +26,9 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
-		<a href = "/main/oj">题库</a>
+		<a href = "/01/oj">题库</a>
 	</body>
 </html>
+
 
 
