--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -4,7 +4,7 @@
 		<meta charset = "utf-8">
 		<title>GZOI</title>
 		<!--网页图标-->
-		<link rel = "icon" type = "image/x-icon" href = "/main/img/favicon.ico" />
+		<link rel = "icon" type = "image/x-icon" href = "/01/img/favicon.ico" />
 	</head>
 	<body>
 		<p>Welcome!</p>
