--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
-		<a href = "/01/oj">题库</a>
+		<a href = "/01/gzoi">题库</a>
 	</body>
 </html>
-
-
-
