--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 				text-align: center;
 				margin: auto;
 				color: whitesmoke;
+			}.linker{
+				/* 链接 */
+				background-color: rgba(255,255,255,0.3);
 			}
 		</style>
 	</head>
@@ -26,6 +29,8 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
-		<a href = "/01/gzoi">题库</a>
+		<div class = "linker">
+			<a href = "/01/gzoi">题库</a>
+		</div>
 	</body>
 </html>
