--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 			}.linker{
 				/* 链接 */
 				background-color: rgba(255,255,255,0.3);
+				height: 100px;
+				width: 25%;
+				backdrop-filter: blur(20px);
+				border-radius: 5px;
 			}
 		</style>
 	</head>
@@ -29,8 +33,10 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
-		<div class = "linker">
-			<a href = "/01/gzoi">题库</a>
-		</div>
+		<a href = "/01/gzoi">
+			<div class = "linker">
+				<p>GZOI</p>
+			</div>
+		</a>
 	</body>
 </html>
