--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				width: 25%;
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
+			}.linktext{
+				/* 链接文字（无下划线） */
+				text-decoration: none;
 			}
 		</style>
 	</head>
@@ -35,8 +38,9 @@
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
 		<a href = "/01/gzoi">
 			<div class = "linker">
-				<p>GZOI</p>
+				<p class = "linktext">GZOI</p>
 			</div>
 		</a>
 	</body>
 </html>
+
