--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
-		<a href = "/01/gzoi">
+		<a href = "/01/gzoi" class = "linktext">
 			<div class = "linker">
-				<p class = "linktext">GZOI</p>
+				<p>GZOI</p>
 			</div>
 		</a>
 	</body>
 </html>
+
 
