--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 				width: 25%;
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
-			}.linktext{
+				text-decoration: none;
+			}a{
 				/* 链接文字（无下划线） */
 				text-decoration: none;
 			}
@@ -36,12 +37,13 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
-		<a href = "/01/gzoi" class = "linktext">
+		<a href = "/01/gzoi">
 			<div class = "linker">
 				<p>GZOI</p>
 			</div>
 		</a>
 	</body>
 </html>
+
 
 
