--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
 		<a href = "/01/gzoi">
 			<div class = "linker">
-				<p>GZOI</p>
+				<p style = "color: whitesmoke; font-size: 2cm;">GZOI</p>
 			</div>
 		</a>
 	</body>
 </html>
+
 
 
 
