--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
 				text-decoration: none;
-			}a{
-				/* 链接文字（无下划线） */
-				text-decoration: none;
+				color: #03B0FD;
 			}
 		</style>
 	</head>
@@ -39,12 +37,8 @@
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
 		<a href = "/01/gzoi">
 			<div class = "linker">
-				<p style = "color: whitesmoke; font-size: 2cm;">GZOI</p>
+				<p>GZOI</p>
 			</div>
 		</a>
 	</body>
 </html>
-
-
-
-
