--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			body{
 				/* 背景图片 */
 				background: url(/01/img/background.png) no-repeat;
+			}a{
+				text-decoration: none;
 			}.headtitle{
 				/* 标题 */
 				text-align: center;
@@ -25,7 +27,7 @@
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
 				text-decoration: none;
-				color: #03B0FD;
+				color: #FF7A01;
 			}
 		</style>
 	</head>
@@ -42,3 +44,4 @@
 		</a>
 	</body>
 </html>
+
