--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -5,8 +5,11 @@
 		<title>GZOI</title>
 		<!--网页图标-->
 		<link rel = "icon" type = "image/x-icon" href = "/01/img/favicon.ico" />
+		<style>
+			
+		</style>
 	</head>
 	<body>
-		<p>Welcome!</p>
+		
 	</body>
 </html>
