--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -6,10 +6,102 @@
 		<!--网页图标-->
 		<link rel = "icon" type = "image/x-icon" href = "/01/img/favicon.ico" />
 		<style>
-			
+			*{
+				box-sizing: bother-box;
+				margin: 0;
+				padding: 0;
+				font: Arial, Helvetica, sans-serif;
+			}body{
+				background-color: #03B0FD;
+			}.wrapper{
+				width: 100%;
+				height: 100vh;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}.container{
+				height: 400px;
+				display: flex;
+				flex-wrap: nowrap;
+				justify-content: start;
+			}.card{
+				width: 80px;
+				border-radius: .75rem;
+				background-size: cover;
+				cursur: pointer;
+				overflow: hidden;
+				border-radius: 2rem;
+				margin: 0 10px;
+				display: flex;
+				align-items: flex-end;
+				transition: .6s cubic-bezier{.28,-0.03,0,.99};
+				box-shadow: 0 10px 30px -5px rgba{0,0,0,0.8};
+			}.card>.row{
+				color: white;
+				border-radius: 50%;
+				width: 50px;
+				display: flex;
+				justify-content: center;
+				opacity: .7;
+				align-items: center;
+				margin: 15px;
+			}.card:nth-child(2).icon{
+				background-color: #7392a2;
+			}.card:nth-child(4).icon{
+				background-colro: #b0c9df;
+			}.card>.row>.description{
+				display: flex;
+				justify-content: center;
+				flex-direction: column;
+				overflow: hidden;
+				height: 80px;
+				width: 520px;
+				opacity: 0;
+				transform: translateY(30px);
+				transition-delay: .3s;
+				transition: all .3s ease;
+			}.description p{
+				color: #eaeaef;
+				padding-top: 5px;
+			}.description h4{
+				text-transform: uppercase;
+			}input{
+				display: none;
+			}input:checked + label{
+				width: 600px;
+			}input:checked + label .description{
+				opacity: 1 !important;
+				transform: translateY(0) !important;
+			}.card[for = 'c1']{
+				background-image: url("/01/gzoi/img/chapter_1.jpg");
+			}.card[for = 'c2']{
+				background-image: url("/01/gzoi/img/gzoi_1.jpeg");
+			}
 		</style>
 	</head>
 	<body>
-		
+		<div class = "wrapper">
+			<div class = "container">
+				<input type = "ratio" name = "slide" id = "c1" checked/>
+				<label for = "c1" class = "card">
+					<div class = "row">
+						<div class = "icon">1</div>
+						<div class = "description">
+							<h4>Chapter 1</h4>
+							<p>山水之行</p>
+						</div>
+					</div>
+				</label><input type = "ratio" name = "slide" id = "c2" checked/>
+				<label for = "c2" class = "card">
+					<div class = "row">
+						<div class = "icon">2</div>
+						<div class = "description">
+							<h4>GZOI - 1</h4>
+							<p>2025 二十四节气专场 10 - 夏至 & 6 月月赛</p>
+						</div>
+					</div>
+				</label>
+			</div>
+		</div>
 	</body>
 </html>
