--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -38,6 +38,10 @@
 				box-shadow: 0 10px 30px -5px rgba{0,0,0,0.8};
 			}.card>.row{
 				color: white;
+				display: flex;
+				flex-wrap: nowrap;
+			}.card>.row.icon{
+				color: white;
 				border-radius: 50%;
 				width: 50px;
 				display: flex;
