--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "zh-CN">
+<html lang = "en">
 	<head>
 		<meta charset = "utf-8">
 		<title>GZOI</title>
@@ -10,7 +10,7 @@
 	<body>
 		<div class = "wrapper">
 			<div class = "container">
-				<input type = "ratio" name = "slide" id = "c1" checked />
+				<input type = "radio" name = "slide" id = "c1" checked />
 				<label for = "c1" class = "card">
 					<div class = "row">
 						<div class = "icon">1</div>
@@ -20,7 +20,7 @@
 						</div>
 					</div>
 				</label>
-				<input type = "ratio" name = "slide" id = "c2" />
+				<input type = "radio" name = "slide" id = "c2" />
 				<label for = "c2" class = "card">
 					<div class = "row">
 						<div class = "icon">2</div>
