--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang = "zh-CN">
 	<head>
 		<meta charset = "utf-8">
 		<title>GZOI</title>
 		<!--网页图标-->
 		<link rel = "icon" type = "image/x-icon" href = "/01/img/favicon.ico" />
-		<link rel = "stylesheet" href = "style.css" />
+		<link rel = "stylesheet" href = "/01/gzoi/style.css" />
 	</head>
 	<body>
 		<div class = "wrapper">
