--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang = "zh-CN">
 	<head>
-		<meta charset = "utf-8">
+		<meta charset = "utf-8" />
+		<meta name = "viewport" content = "width = #,inital-scale = 1.0"/>
 		<title>GZOI</title>
 		<!--网页图标-->
 		<link rel = "icon" type = "image/x-icon" href = "/01/img/favicon.ico" />
