--- a/gzoi/index.html
+++ b/gzoi/index.html
@@ -13,7 +13,7 @@
 				<input type = "radio" name = "slide" id = "c1" checked />
 				<label for = "c1" class = "card">
 					<div class = "row">
-						<div for = "c1" class = "icon">1</div>
+						<div for = "typ1" class = "icon">C1</div>
 						<div class = "description">
 							<h4>Chapter 1</h4>
 							<p>山水之行</p>
@@ -23,7 +23,7 @@
 				<input type = "radio" name = "slide" id = "c2" />
 				<label for = "c2" class = "card">
 					<div class = "row">
-						<div for = "c2" class = "icon">2</div>
+						<div for = "typ2" class = "icon">R1</div>
 						<div class = "description">
 							<h4>GZOI - 1</h4>
 							<p>2025 二十四节气专场 10 - 夏至 & 6 月月赛</p>
@@ -34,4 +34,3 @@
 		</div>
 	</body>
 </html>
-
