--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
 				text-decoration: none;
-				color: #FF7A01;
+				color: #ff003b;
+				text-align: center;
+				justify-content: center;
 			}
 		</style>
 	</head>
@@ -44,4 +46,3 @@
 		</a>
 	</body>
 </html>
-
