--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				border-radius: 5px;
 				text-decoration: none;
 				color: #ff003b;
+			}.linkertext{
 				text-align: center;
 				justify-content: center;
 			}
@@ -41,8 +42,9 @@
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
 		<a href = "/01/gzoi">
 			<div class = "linker">
-				<p>GZOI</p>
+				<p class = "linkertext">GZOI</p>
 			</div>
 		</a>
 	</body>
 </html>
+
