--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
 				text-decoration: none;
-				color: #ff003b;
 			}.linkertext{
+				color: #ff003b;
 				text-align: center;
 				justify-content: center;
 			}
@@ -42,9 +42,12 @@
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
 		<a href = "/01/gzoi">
 			<div class = "linker">
-				<p class = "linkertext">GZOI</p>
+				<div class = "linkertext">
+					GZOI
+				</div>
 			</div>
 		</a>
 	</body>
 </html>
+
 
