--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			}.linkertext{
 				color: #ff003b;
 				text-align: center;
-				justify-content: center;
+				padding: 0px 0;
 			}
 		</style>
 	</head>
@@ -49,5 +49,3 @@
 		</a>
 	</body>
 </html>
-
-
