--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 				color: whitesmoke;
 			}.linker{
 				/* 链接 */
+				display: flex;
+				text-align: center;
+				justify-content: center;
 				background-color: rgba(255,255,255,0.3);
 				height: 100px;
 				width: 25%;
@@ -29,8 +32,6 @@
 				text-decoration: none;
 			}.linkertext{
 				color: #ff003b;
-				text-align: center;
-				padding: 0px 0;
 			}
 		</style>
 	</head>
@@ -49,3 +50,4 @@
 		</a>
 	</body>
 </html>
+
