--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			}.linker{
 				/* 链接 */
 				display: flex;
-				text-align: center;
+				align-items: center;
 				justify-content: center;
 				background-color: rgba(255,255,255,0.3);
 				height: 100px;
@@ -50,4 +50,5 @@
 		</a>
 	</body>
 </html>
+
 
