--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 				text-decoration: none;
 			}.linkertext{
 				color: #ff003b;
+				font-size: 1.5rem;
+				font-weight: bold;
 			}
 		</style>
 	</head>
@@ -50,5 +52,6 @@
 		</a>
 	</body>
 </html>
+
 
 
