--- a/index.html
+++ b/index.html
@@ -43,15 +43,21 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
-		<a href = "/01/gzoi">
-			<div class = "linker">
-				<div class = "linkertext">
-					GZOI
+		<div>
+			<a href = "/01/gzoi">
+				<div class = "linker">
+					<div class = "linkertext">
+						GZOI
+					</div>
 				</div>
-			</div>
-		</a>
+			</a>
+			<a href = "/01/26fool">
+				<div class = "linker">
+					<div class = "linkertext">
+						【数据删除】
+					</div>
+				</div>
+			</a>
+		</div>
 	</body>
 </html>
-
-
-
