--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 			}.links-container{
 				display: flex;
 				gap: 20px;
-				justify-content: center;
 				flex-wrap: wrap;
 				margin-top: 20px;
 			}.linker{
@@ -32,8 +31,7 @@
 				justify-content: center;
 				background-color: rgba(255,255,255,0.3);
 				height: 100px;
-				width: 200px;
-				min-width: 150px;
+				width: 25%;
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
 				text-decoration: none;
@@ -68,4 +66,3 @@
 		</div>
 	</body>
 </html>
-
