--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			}.links-container{
 				display: flex;
 				gap: 20px;
+				justify-content: center;
 				flex-wrap: wrap;
 				margin-top: 20px;
 			}.linker{
@@ -32,6 +33,8 @@
 				background-color: rgba(255,255,255,0.3);
 				height: 100px;
 				width: 25%;
+				width: 200px;
+				min-width: 150px;
 				backdrop-filter: blur(20px);
 				border-radius: 5px;
 				text-decoration: none;
@@ -48,6 +51,7 @@
 		</div>
 		<hr>
 		<p>欢迎来到 GZXUEXUE 的个人主页！但是这里还没有完工。</p>
+		<div>
 		<div class = "links-container">
 			<a href = "/01/gzoi">
 				<div class = "linker">
