--- a/26fool/index.html
+++ b/26fool/index.html
@@ -63,7 +63,7 @@
         as well as any file permissions.<br>
         For root URLs (like <code>http://example.com/</code>) you must provide an
         <code>index.html</code> file.<br>
-        WHAT'S MORE, THE VERIFICATION CODE IS: <code>o03a</code>
+        <strong>WHAT'S MORE, THE VERIFICATION CODE IS: <code>o03a</code></strong>
       </p>
 
       <p>
@@ -87,3 +87,4 @@
   
 
 </body></html>
+
