--- a/26fool/verify/v1/index.html
+++ b/26fool/verify/v1/index.html
@@ -8,9 +8,10 @@
         <p style="color: white;">Caesar, use +2 to encrypt</p>
         <form name="WhyAreYouLookingThis">
             <input type="text" name="veri" size="20"></input>
-            <input type="button" name="press" value="Check!" onclick="verify();"
+            <input type="button" name="press" value="Check!" onclick="verify();">
             <br>
             <p name="result">You haven't checked anything yet.</p>
         </form>
     </body>
+
 </html>
